[package]
name = "alloycli"
license = "MIT"
version = "0.1.1"
description = "A CLI tool build by alloy"
edition = "2021"
repository = "https://github.com/LI-YONG-QI/alloy_cli"


[dependencies]
alloy = { version = "0.1.4", features = ["full"] }
clap = { version = "4.5.9", features = ["derive"] }
eyre = "0.6.12"
tokio = "1.38.0"
